k8s/apps/dify/resources/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: route

spec:
  routes:
    # bot のクロールを抑止するため robots.txt を返す。
    - kind: Rule
      match: Host(`dify.starry.blue`) && Path(`/robots.txt`)
      priority: 100
      services:
        - name: robots-txt
          namespace: traefik
          port: http

    - kind: Rule
      match: Host(`dify.starry.blue`) && (PathPrefix(`/console/api`) || PathPrefix(`/api`) || PathPrefix(`/v1`) || PathPrefix(`/files`))
      services:
        - name: dify-api-svc
          port: api
    - kind: Rule
      match: Host(`dify.starry.blue`)
      services:
        - name: dify-web-svc
          port: web
